scroll personalizado, idioma de email añadido y cambio de email con confirmación añadido